class Observer {
    update(data) {
        throw new Error("Not implemented");
    }
}

module.exports = Observer;